--- a/FavoriteBook/Base.lproj/Main.storyboard
+++ b/FavoriteBook/Base.lproj/Main.storyboard
@@ -292,9 +292,11 @@
                         <outlet property="genreTextField" destination="VXx-th-v79" id="XVu-hT-nBK"/>
                         <outlet property="lengthTextField" destination="JPL-Xb-MEn" id="k48-nn-6sG"/>
                         <outlet property="titleTextField" destination="MFd-TW-PIx" id="7E2-JD-8o6"/>
+                        <segue destination="R5X-zB-QF0" kind="unwind" identifier="UnwindToBookTable" unwindAction="prepareForUnwindWithSegue:" id="Aig-m5-xNG"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kQ2-9r-KgJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="R5X-zB-QF0" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1804" y="637"/>
         </scene>
